--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onsitex",
-  "description": "OnSiteX: Ionic Angular2 NodeJS Mongo",
+  "description": "OnSiteX: Mongo Angular2 Ionic NodeJS; a MAIN Stack App",
   "author": "Michael Bates",
   "license": "UNLICENSED",
   "homepage": "https://github.com/starmobiledevelopers/OnSiteX/",
@@ -19,23 +19,22 @@
     "run:before": "build"
   },
   "dependencies": {
-    "@angular/common": "^2.1.1",
-    "@angular/compiler": "^2.1.1",
-    "@angular/compiler-cli": "^2.1.1",
-    "@angular/core": "^2.1.1",
-    "@angular/forms": "^2.1.1",
-    "@angular/http": "^2.1.1",
-    "@angular/platform-browser": "^2.1.1",
-    "@angular/platform-browser-dynamic": "^2.1.1",
-    "@angular/platform-server": "^2.1.1",
-    "@ionic/storage": "^1.1.6",
-    "angular2-jwt": "^0.1.25",
-    "ionic-angular": "^2.0.0-rc.1",
-    "ionic-native": "^2.2.4",
-    "ionicons": "^3.0.0",
-    "moment": "^2.15.2",
-    "rxjs": "^5.0.0-rc.1",
-    "zone.js": "^0.6.26"
+        "@angular/common": "2.1.1",
+    "@angular/compiler": "2.1.1",
+    "@angular/compiler-cli": "2.1.1",
+    "@angular/core": "2.1.1",
+    "@angular/forms": "2.1.1",
+    "@angular/http": "2.1.1",
+    "@angular/platform-browser": "2.1.1",
+    "@angular/platform-browser-dynamic": "2.1.1",
+    "@angular/platform-server": "2.1.1",
+    "@ionic/storage": "1.1.6",
+    "ionic-angular": "2.0.0-rc.1",
+    "ionic-native": "2.2.4",
+    "ionicons": "3.0.0",
+    "rxjs": "5.0.0-rc.1",
+    "zone.js": "0.6.26",
+    "moment": "2.15.2"
   },
   "devDependencies": {
     "@ionic/app-scripts": "^0.0.36",
@@ -49,11 +48,5 @@
     "cordova-plugin-device",
     "cordova-plugin-splashscreen",
     "ionic-plugin-keyboard"
-  ],
-  "cordovaPlatforms": [
-    "android",
-    "browser",
-    "ios",
-    "windows"
   ]
 }
