--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,10 @@
     ],
     "module": "es2015",
     "moduleResolution": "node",
-    "target": "es6"
+    "target": "es5"
   },
   "exclude": [
     "node_modules"
   ],
-  "compileOnSave": true
+  "compileOnSave": false
 }
