--- a/package.json
+++ b/package.json
@@ -19,30 +19,30 @@
     "run:before": "build"
   },
   "dependencies": {
-    "@angular/common": "2.2.4",
-    "@angular/compiler": "2.2.4",
-    "@angular/compiler-cli": "2.2.4",
-    "@angular/core": "2.2.4",
-    "@angular/forms": "2.2.4",
-    "@angular/http": "2.2.4",
-    "@angular/platform-browser": "2.2.4",
-    "@angular/platform-browser-dynamic": "2.2.4",
-    "@angular/platform-server": "2.2.4",
-    "@ionic/storage": "1.1.6",
-    "ionic-angular": "2.0.0-rc.3",
-    "ionic-native": "2.2.7",
+    "@angular/common": "^2.2.4",
+    "@angular/compiler": "^2.2.4",
+    "@angular/compiler-cli": "^2.2.4",
+    "@angular/core": "^2.2.4",
+    "@angular/forms": "^2.2.4",
+    "@angular/http": "^2.2.4",
+    "@angular/platform-browser": "^2.2.4",
+    "@angular/platform-browser-dynamic": "^2.2.4",
+    "@angular/platform-server": "^2.2.4",
+    "@ionic/storage": "^1.1.6",
+    "ionic-angular": "^2.0.0-rc.3",
+    "ionic-native": "^2.2.7",
     "ionicons": "3.0.0",
     "moment": "^2.15.2",
     "moment-timezone": "^0.5.7",
     "pouchdb": "^6.0.7",
-    "rxjs": "5.0.0-rc.4",
-    "zone.js": "0.7.2"
+    "rxjs": "^5.0.0-rc.4",
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "0.0.46",
+    "@ionic/app-scripts": "0.0.47",
     "@types/moment-timezone": "^0.2.32",
     "@types/pouchdb": "^5.4.28",
-    "node-sass": "^3.10.1",
+    "node-sass": "^4.1.0",
     "typescript": "^2.2.0-dev.20161129"
   },
   "cordovaPlugins": [
