--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@ionic/app-scripts": "0.0.47",
     "@types/moment-timezone": "^0.2.32",
     "@types/pouchdb": "^5.4.28",
+    "ionic-native": "^2.2.12",
     "node-sass": "^4.1.0",
     "typescript": "^2.2.0-dev.20161129"
   },
@@ -51,7 +52,9 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "cordova-plugin-network-information",
+    "cordova-plugin-secure-storage"
   ],
   "cordovaPlatforms": []
 }
