--- a/package.json
+++ b/package.json
@@ -29,8 +29,16 @@
     "@angular/platform-browser-dynamic": "^2.2.4",
     "@angular/platform-server": "^2.2.4",
     "@ionic/storage": "^1.1.6",
+    "cordova-plugin-console": "^1.0.5",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-network-information": "^1.3.1",
+    "cordova-plugin-secure-storage": "^2.6.3",
+    "cordova-plugin-splashscreen": "^4.0.1",
+    "cordova-plugin-statusbar": "^2.2.1",
+    "cordova-plugin-whitelist": "^1.3.1",
     "ionic-angular": "^2.0.0-rc.3",
     "ionic-native": "^2.2.7",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "moment": "^2.15.2",
     "moment-timezone": "^0.5.7",
