--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "onsitex",
-  "description": "OnSiteX: PouchDB Angular2 NodeJS Ionic CouchDB; a 'PANIC' Stack App",
   "author": "Michael Bates",
+  "description": "OnSiteX: PouchDB Angular2 NodeJS Ionic CouchDB; a 'PANIC' Stack App",
   "homepage": "https://github.com/starmobiledevelopers/OnSiteX/",
   "private": true,
   "license": "UNLICENSED",
@@ -9,46 +9,12 @@
     "type": "git",
     "url": "git+https://github.com/starmobiledevelopers/OnSiteX.git"
   },
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/common": "^2.4.1",
-    "@angular/compiler": "^2.4.1",
-    "@angular/compiler-cli": "^2.4.1",
-    "@angular/core": "^2.4.1",
-    "@angular/forms": "^2.4.1",
-    "@angular/http": "^2.4.1",
-    "@angular/platform-browser": "^2.4.1",
-    "@angular/platform-browser-dynamic": "^2.4.1",
-    "@angular/platform-server": "^2.4.1",
-    "@ionic/storage": "^1.1.7",
-    "cordova-plugin-console": "^1.0.5",
-    "cordova-plugin-device": "^1.1.4",
-    "cordova-plugin-network-information": "^1.3.1",
-    "cordova-plugin-secure-storage": "^2.6.3",
-    "cordova-plugin-splashscreen": "^4.0.1",
-    "cordova-plugin-statusbar": "^2.2.1",
-    "cordova-plugin-whitelist": "^1.3.1",
-    "ionic-angular": "^2.0.0-rc.4",
-    "ionic-native": "^2.2.13",
-    "ionic-plugin-keyboard": "^2.2.1",
-    "ionicons": "3.0.0",
-    "pouchdb": "^6.1.1",
-    "rxjs": "^5.0.2",
-    "zone.js": "^0.7.4"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "0.0.48",
-    "@types/cordova": "0.0.34",
-    "@types/pouchdb": "^5.4.28",
-    "angular-in-memory-web-api": "^0.2.4",
-    "node-sass": "^4.1.1",
-    "typescript": "^2.2.0-dev.20170105"
-  },
+  "cordovaPlatforms": [
+    "browser",
+    "android",
+    "ios",
+    "desktop"
+  ],
   "cordovaPlugins": [
     "cordova-plugin-device",
     "cordova-plugin-console",
@@ -59,10 +25,43 @@
     "cordova-plugin-network-information",
     "cordova-plugin-secure-storage"
   ],
-  "cordovaPlatforms": [
-    "browser",
-    "android",
-    "ios",
-    "desktop"
-  ]
+  "dependencies": {
+    "@angular/common": "^2.4.2",
+    "@angular/compiler": "^2.4.2",
+    "@angular/compiler-cli": "^2.4.2",
+    "@angular/core": "^2.4.2",
+    "@angular/forms": "^2.4.2",
+    "@angular/http": "^2.4.2",
+    "@angular/platform-browser": "^2.4.2",
+    "@angular/platform-browser-dynamic": "^2.4.2",
+    "@angular/platform-server": "^2.4.2",
+    "@ionic/storage": "^1.1.7",
+    "cordova-plugin-console": "^1.0.5",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-network-information": "^1.3.1",
+    "cordova-plugin-secure-storage": "^2.6.3",
+    "cordova-plugin-splashscreen": "^4.0.1",
+    "cordova-plugin-statusbar": "^2.2.1",
+    "cordova-plugin-whitelist": "^1.3.1",
+    "ionic-angular": "^2.0.0-rc.4",
+    "ionic-native": "^2.2.14",
+    "ionic-plugin-keyboard": "^2.2.1",
+    "ionicons": "3.0.0",
+    "pouchdb": "^6.1.1",
+    "rxjs": "^5.0.3",
+    "zone.js": "^0.7.4"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "1.0.0",
+    "@types/cordova": "0.0.34",
+    "@types/pouchdb": "^5.4.28",
+    "angular-in-memory-web-api": "^0.2.4",
+    "node-sass": "^4.2.0"
+  },
+  "scripts": {
+    "build": "ionic-app-scripts build",
+    "clean": "ionic-app-scripts clean",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
+  }
 }
