--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "@types/cordova": "0.0.34",
     "@types/pouchdb": "^5.4.28",
     "angular-in-memory-web-api": "^0.2.4",
-    "node-sass": "^4.2.0"
+    "node-sass": "^4.2.0",
+    "typescript": "^2.2.0-dev.20170109"
   },
   "scripts": {
     "build": "ionic-app-scripts build",
