--- a/Docs/examples -code/Section Code (Finished)/package.json
+++ b/Docs/examples -code/Section Code (Finished)/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
     "@ionic/storage": "1.1.7",
-    "firebase": "^3.6.5",
+    "angular2-google-maps": "^0.17.0",
     "ionic-angular": "2.0.0-rc.5",
     "ionic-native": "2.2.11",
     "ionicons": "3.0.0",
