--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
     "@ionic/storage": "1.1.7",
-    "ionic-angular": "2.0.0",
-    "ionic-native": "2.4.1",
-    "sw-toolbox": "3.4.0",
+    "angular2-google-maps": "^0.17.0",
     "cordova-plugin-console": "^1.0.5",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-network-information": "^1.3.1",
@@ -46,10 +44,13 @@
     "cordova-plugin-splashscreen": "^4.0.1",
     "cordova-plugin-statusbar": "^2.2.1",
     "cordova-plugin-whitelist": "^1.3.1",
+    "ionic-angular": "2.0.0",
+    "ionic-native": "2.4.1",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "pouchdb": "^6.1.1",
     "rxjs": "^5.1.0",
+    "sw-toolbox": "3.4.0",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
