--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "@angular/platform-browser": "4.0.3",
     "@angular/platform-browser-dynamic": "4.0.3",
     "@angular/platform-server": "4.0.3",
+    "@ionic-native/core": "3.5.0",
+    "@ionic-native/splash-screen": "3.5.0",
+    "@ionic-native/status-bar": "3.5.0",
     "@ionic/storage": "2.0.1",
     "angular2-google-maps": "^0.17.0",
     "cordova-plugin-console": "^1.0.6",
@@ -45,8 +48,6 @@
     "cordova-plugin-statusbar": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.2",
     "ionic-angular": "3.0.1",
-    "ionic-native": "3.5.0",
-    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "pouchdb": "^6.2.0",
     "rxjs": "^5.3.0",
