--- a/package.json
+++ b/package.json
@@ -1,69 +1,76 @@
 {
-  "name": "onsitex",
-  "author": "Michael Bates",
-  "description": "OnSiteX: PouchDB Angular2 NodeJS Ionic CouchDB; a 'PANIC' Stack App",
-  "homepage": "https://github.com/starmobiledevelopers/OnSiteX/",
-  "private": true,
-  "license": "UNLICENSED",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/starmobiledevelopers/OnSiteX.git"
-  },
-  "cordovaPlatforms": [
-    "browser",
-    "android",
-    "ios",
-    "desktop"
-  ],
-  "cordovaPlugins": [
-    "cordova-plugin-device",
-    "cordova-plugin-console",
-    "cordova-plugin-whitelist",
-    "cordova-plugin-splashscreen",
-    "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard",
-    "cordova-plugin-network-information",
-    "cordova-plugin-secure-storage"
-  ],
-  "dependencies": {
-    "@angular/common": "4.0.3",
-    "@angular/compiler": "4.0.3",
-    "@angular/compiler-cli": "4.0.3",
-    "@angular/core": "4.0.3",
-    "@angular/forms": "4.0.3",
-    "@angular/http": "4.0.3",
-    "@angular/platform-browser": "4.0.3",
-    "@angular/platform-browser-dynamic": "4.0.3",
-    "@angular/platform-server": "4.0.3",
-    "@ionic-native/core": "3.5.0",
-    "@ionic-native/splash-screen": "3.5.0",
-    "@ionic-native/status-bar": "3.5.0",
-    "@ionic/storage": "2.0.1",
-    "angular2-google-maps": "^0.17.0",
-    "cordova-plugin-console": "^1.0.6",
-    "cordova-plugin-device": "^1.1.5",
-    "cordova-plugin-network-information": "^1.3.2",
-    "cordova-plugin-secure-storage": "^2.6.5",
-    "cordova-plugin-splashscreen": "^4.0.2",
-    "cordova-plugin-statusbar": "^2.2.2",
-    "cordova-plugin-whitelist": "^1.3.2",
-    "ionic-angular": "3.0.1",
-    "ionicons": "3.0.0",
-    "pouchdb": "^6.2.0",
-    "rxjs": "^5.3.0",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "^0.8.8"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "1.3.4",
-    "@types/cordova": "0.0.34",
-    "@types/pouchdb": "6.1.0",
-    "typescript": "^2.3.0-dev.20170423"
-  },
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  }
+    "name": "onsitex",
+    "author": "Michael Bates",
+    "description": "OnSiteX: PouchDB Angular2 NodeJS Ionic CouchDB; a 'PANIC' Stack App",
+    "homepage": "https://github.com/starmobiledevelopers/OnSiteX/",
+    "private": true,
+    "license": "UNLICENSED",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/starmobiledevelopers/OnSiteX.git"
+    },
+    "cordovaPlatforms": [
+        "browser",
+        "android",
+        "ios",
+        "desktop"
+    ],
+    "cordovaPlugins": [
+        "cordova-plugin-device",
+        "cordova-plugin-console",
+        "cordova-plugin-whitelist",
+        "cordova-plugin-splashscreen",
+        "cordova-plugin-statusbar",
+        "ionic-plugin-keyboard",
+        "cordova-plugin-network-information",
+        "cordova-plugin-secure-storage"
+    ],
+    "dependencies": {
+        "@angular/common": "4.1.1",
+        "@angular/compiler": "4.1.1",
+        "@angular/compiler-cli": "4.1.1",
+        "@angular/core": "4.1.1",
+        "@angular/forms": "4.1.1",
+        "@angular/http": "4.1.1",
+        "@angular/platform-browser": "4.1.1",
+        "@angular/platform-browser-dynamic": "4.1.1",
+        "@angular/platform-server": "4.1.1",
+        "@ionic-native/core": "3.6.1",
+        "@ionic-native/splash-screen": "3.6.1",
+        "@ionic-native/status-bar": "3.6.1",
+        "@ionic/storage": "2.0.1",
+        "angular2-google-maps": "^0.17.0",
+        "cordova-plugin-console": "^1.0.7",
+        "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-network-information": "^1.3.3",
+        "cordova-plugin-secure-storage": "^2.6.5",
+        "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-sqlite-2": "^1.0.4",
+        "cordova-plugin-statusbar": "^2.2.3",
+        "cordova-plugin-whitelist": "^1.3.2",
+        "ionic-angular": "3.1.1",
+        "ionicons": "3.0.0",
+        "pouchdb": "^6.2.0",
+        "rxjs": "^5.3.1",
+        "sw-toolbox": "3.6.0",
+        "zone.js": "^0.8.10"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "1.3.7",
+        "@types/cordova": "0.0.34",
+        "@types/pouchdb": "6.1.0",
+        "typescript": "^2.3.2"
+    },
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve"
+    },
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-sqlite-2": {},
+            "cordova-plugin-secure-storage": {}
+        }
+    }
 }
