--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "onsitex",
   "author": "Michael Bates",
   "description": "OnSiteX: PouchDB Angular2 NodeJS Ionic CouchDB; a 'PANIC' Stack App",
+  "config": {
+    "ionic_source_map": "source-map",
+    "ionic_bundler": "webpack",
+    "ionic_source_map_types": "#inline-source-map"
+  },
   "homepage": "https://github.com/starmobiledevelopers/OnSiteX/",
   "private": true,
   "license": "UNLICENSED",
@@ -66,8 +71,8 @@
   "scripts": {
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
+    "ionic:build": "ionic-app-scripts build --dev",
+    "ionic:serve": "ionic-app-scripts serve --dev"
   },
   "cordova": {
     "plugins": {
