--- a/package.json
+++ b/package.json
@@ -1,89 +1,99 @@
 {
-  "name": "onsitex",
-  "author": "Michael Bates",
-  "description": "OnSiteX: PouchDB Angular2 NodeJS Ionic CouchDB; a 'PANIC' Stack App",
-  "config": {
-    "ionic_source_map": "source-map",
-    "ionic_bundler": "webpack",
-    "ionic_source_map_types": "#inline-source-map"
-  },
-  "homepage": "https://github.com/starmobiledevelopers/OnSiteX/",
-  "private": true,
-  "license": "UNLICENSED",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/starmobiledevelopers/OnSiteX.git"
-  },
-  "cordovaPlatforms": [
-    "browser",
-    "android",
-    "ios",
-    "desktop"
-  ],
-  "cordovaPlugins": [
-    "cordova-plugin-device",
-    "cordova-plugin-console",
-    "cordova-plugin-whitelist",
-    "cordova-plugin-splashscreen",
-    "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard",
-    "cordova-plugin-network-information",
-    "cordova-plugin-secure-storage"
-  ],
-  "dependencies": {
-    "@angular/common": "4.1.1",
-    "@angular/compiler": "4.1.1",
-    "@angular/compiler-cli": "4.1.1",
-    "@angular/core": "4.1.1",
-    "@angular/forms": "4.1.1",
-    "@angular/http": "4.1.1",
-    "@angular/platform-browser": "4.1.1",
-    "@angular/platform-browser-dynamic": "4.1.1",
-    "@angular/platform-server": "4.1.1",
-    "@ionic-native/core": "3.6.1",
-    "@ionic-native/splash-screen": "3.6.1",
-    "@ionic-native/status-bar": "3.6.1",
-    "@ionic/storage": "2.0.1",
-    "angular2-google-maps": "^0.17.0",
-    "cordova-plugin-console": "~1.0.4",
-    "cordova-plugin-device": "~1.1.3",
-    "cordova-plugin-network-information": "^1.3.3",
-    "cordova-plugin-secure-storage": "^2.6.5",
-    "cordova-plugin-splashscreen": "~4.0.0",
-    "cordova-plugin-sqlite-2": "^1.0.4",
-    "cordova-plugin-statusbar": "~2.2.0",
-    "cordova-plugin-whitelist": "~1.3.0",
-    "ionic-angular": "3.1.1",
-    "ionic-plugin-keyboard": "~2.2.1",
-    "ionicons": "3.0.0",
-    "pouchdb": "^6.2.0",
-    "pouchdb-authentication": "^0.5.5",
-    "rxjs": "^5.3.1",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "^0.8.10"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "1.3.7",
-    "@types/cordova": "0.0.34",
-    "@types/pouchdb": "6.1.0",
-    "typescript": "^2.3.2"
-  },
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "ionic:build": "ionic-app-scripts build --dev",
-    "ionic:serve": "ionic-app-scripts serve --dev"
-  },
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-sqlite-2": {},
-      "cordova-plugin-secure-storage": {},
-      "cordova-plugin-console": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-whitelist": {},
-      "ionic-plugin-keyboard": {}
+    "name": "onsitex",
+    "author": "Michael Bates",
+    "description": "OnSiteX: PouchDB Angular2 NodeJS Ionic CouchDB; a 'PANIC' Stack App",
+    "config": {
+        "ionic_source_map": "source-map",
+        "ionic_bundler": "webpack",
+        "ionic_source_map_types": "#inline-source-map"
+    },
+    "homepage": "https://github.com/starmobiledevelopers/OnSiteX/",
+    "private": true,
+    "license": "UNLICENSED",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/starmobiledevelopers/OnSiteX.git"
+    },
+    "cordovaPlatforms": [
+        "browser",
+        "android",
+        "ios",
+        "desktop"
+    ],
+    "cordovaPlugins": [
+        "cordova-plugin-device",
+        "cordova-plugin-console",
+        "cordova-plugin-whitelist",
+        "cordova-plugin-splashscreen",
+        "cordova-plugin-statusbar",
+        "ionic-plugin-keyboard",
+        "cordova-plugin-network-information",
+        "cordova-plugin-secure-storage"
+    ],
+    "dependencies": {
+        "@angular/common": "4.1.2",
+        "@angular/compiler": "4.1.2",
+        "@angular/compiler-cli": "4.1.2",
+        "@angular/core": "4.1.2",
+        "@angular/forms": "4.1.2",
+        "@angular/http": "4.1.2",
+        "@angular/platform-browser": "4.1.2",
+        "@angular/platform-browser-dynamic": "4.1.2",
+        "@angular/platform-server": "4.1.2",
+        "@ionic-native/core": "3.8.0",
+        "@ionic-native/splash-screen": "3.8.0",
+        "@ionic-native/status-bar": "3.8.0",
+        "@ionic/storage": "2.0.1",
+        "angular2-google-maps": "^0.17.0",
+        "cordova-android": "^6.2.3",
+        "cordova-ios": "^4.4.0",
+        "cordova-plugin-console": "^1.0.7",
+        "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-network-information": "^1.3.3",
+        "cordova-plugin-secure-storage": "^2.6.5",
+        "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-sqlite-2": "^1.0.4",
+        "cordova-plugin-statusbar": "^2.2.3",
+        "cordova-plugin-whitelist": "^1.3.2",
+        "cordova-windows": "^5.0.0",
+        "desktop": "0.0.0",
+        "ionic-angular": "3.2.1",
+        "ionic-plugin-keyboard": "^2.2.1",
+        "ionicons": "3.0.0",
+        "pouchdb": "^6.2.0",
+        "pouchdb-authentication": "^0.5.5",
+        "rxjs": "^5.4.0",
+        "sw-toolbox": "3.6.0",
+        "zone.js": "^0.8.10"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "1.3.7",
+        "@ionic/cli-plugin-cordova": "1.0.0",
+        "@ionic/cli-plugin-ionic-angular": "1.0.0",
+        "@types/cordova": "0.0.34",
+        "@types/pouchdb": "6.1.0",
+        "typescript": "^2.4.0-dev.20170515"
+    },
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "ionic:build": "ionic-app-scripts build --dev",
+        "ionic:serve": "ionic-app-scripts serve --dev"
+    },
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-sqlite-2": {},
+            "cordova-plugin-secure-storage": {},
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {}
+        },
+        "platforms": [
+            "android",
+            "windows"
+        ]
     }
-  }
 }
