--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "ionicons": "3.0.0",
         "pouchdb": "^6.2.0",
         "pouchdb-authentication": "^0.5.5",
+        "pouchdb-upsert": "^2.2.0",
         "rxjs": "^5.4.0",
         "sw-toolbox": "3.6.0",
         "zone.js": "^0.8.10"
