gitignore and package update
Just to avoid sharing production files.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,6 @@ $RECYCLE.BIN/
 Thumbs.db
 UserInterfaceState.xcuserstate
 *.xlsx
-android-release-unsigned.apk
+*.apk
 *.keystore
-OnSiteX.apk
+*.ipa
