--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@angular/platform-browser-dynamic": "4.1.3",
         "@angular/platform-server": "4.1.3",
         "@ionic-native/core": "3.9.2",
+        "@ionic-native/dialogs": "^3.10.0",
         "@ionic-native/secure-storage": "^3.9.2",
         "@ionic-native/splash-screen": "3.9.2",
         "@ionic-native/status-bar": "3.9.2",
@@ -52,6 +53,7 @@
         "cordova-ios": "^4.4.0",
         "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-dialogs": "^1.3.3",
         "cordova-plugin-network-information": "^1.3.3",
         "cordova-plugin-secure-storage": "^2.6.5",
         "cordova-plugin-splashscreen": "^4.0.3",
@@ -66,6 +68,7 @@
         "moment": "^2.18.1",
         "pouchdb": "^6.2.0",
         "pouchdb-authentication": "^0.5.5",
+        "pouchdb-seamless-auth": "^1.0.4",
         "pouchdb-upsert": "^2.2.0",
         "rxjs": "^5.4.0",
         "sprintf-js": "^1.1.0",
@@ -95,7 +98,8 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-dialogs": {}
         },
         "platforms": [
             "android",
