--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "cordova-plugin-whitelist": "^1.3.2",
         "cordova-windows": "^5.0.0",
         "desktop": "0.0.0",
+        "intl": "^1.2.5",
         "ionic-angular": "3.2.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
