--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
         "rxjs": "^5.4.0",
         "sprintf-js": "^1.1.0",
         "sw-toolbox": "3.6.0",
-        "zone.js": "^0.8.10"
+        "zone.js": "^0.8.10",
+        "cordova-plugin-spinner-dialog": "^1.3.1"
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.7",
@@ -100,7 +101,8 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
-            "cordova-plugin-dialogs": {}
+            "cordova-plugin-dialogs": {},
+            "cordova-plugin-spinner-dialog": {}
         },
         "platforms": [
             "android",
