--- a/package.json
+++ b/package.json
@@ -40,10 +40,16 @@
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
         "@angular/platform-server": "4.1.3",
+        "@ionic-native/background-geolocation": "^3.10.2",
         "@ionic-native/core": "3.9.2",
         "@ionic-native/dialogs": "^3.10.0",
+        "@ionic-native/geofence": "^3.10.2",
+        "@ionic-native/local-notifications": "^3.10.3",
+        "@ionic-native/network": "^3.10.2",
+        "@ionic-native/phonegap-local-notification": "^3.10.3",
+        "@ionic-native/push": "^3.10.2",
         "@ionic-native/secure-storage": "^3.9.2",
-        "@ionic-native/splash-screen": "3.9.2",
+        "@ionic-native/splash-screen": "^3.9.2",
         "@ionic-native/status-bar": "3.9.2",
         "@ionic/storage": "2.0.1",
         "@types/sprintf-js": "0.0.27",
@@ -51,22 +57,31 @@
         "cordova-android": "^6.2.3",
         "cordova-browser": "^4.1.0",
         "cordova-ios": "^4.4.0",
+        "cordova-plugin-add-swift-support": "^1.6.0",
+        "cordova-plugin-app-event": "file:node_modules\\cordova-plugin-app-event",
+        "cordova-plugin-compat": "^1.0.0",
         "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-device": "^1.1.6",
         "cordova-plugin-dialogs": "^1.3.3",
+        "cordova-plugin-geofence": "^0.7.0",
+        "cordova-plugin-mauron85-background-geolocation": "^2.2.5",
         "cordova-plugin-network-information": "^1.3.3",
         "cordova-plugin-secure-storage": "^2.6.5",
+        "cordova-plugin-spinner-dialog": "^1.3.1",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-sqlite-2": "^1.0.4",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
         "cordova-windows": "^5.0.0",
+        "de.appplant.cordova.plugin.local-notification": "^0.8.4",
         "desktop": "0.0.0",
+        "es6-promise-plugin": "^4.1.0",
         "intl": "^1.2.5",
         "ionic-angular": "3.2.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "moment": "^2.18.1",
+        "phonegap-plugin-push": "^1.10.4",
         "pouchdb": "^6.2.0",
         "pouchdb-authentication": "^0.5.5",
         "pouchdb-seamless-auth": "^1.0.4",
@@ -74,8 +89,8 @@
         "rxjs": "^5.4.0",
         "sprintf-js": "^1.1.0",
         "sw-toolbox": "3.6.0",
-        "zone.js": "^0.8.10",
-        "cordova-plugin-spinner-dialog": "^1.3.1"
+        "uuid": "^3.0.1",
+        "zone.js": "^0.8.10"
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.7",
@@ -102,7 +117,17 @@
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
             "cordova-plugin-dialogs": {},
-            "cordova-plugin-spinner-dialog": {}
+            "cordova-plugin-spinner-dialog": {},
+            "cordova-plugin-network-information": {},
+            "cordova-plugin-mauron85-background-geolocation": {
+                "ACCOUNT_TYPE": "$PACKAGE_NAME.account",
+                "CONTENT_AUTHORITY": "$PACKAGE_NAME"
+            },
+            "cordova-plugin-geofence": {},
+            "phonegap-plugin-push": {
+                "SENDER_ID": "915660787055"
+            },
+            "de.appplant.cordova.plugin.local-notification": {}
         },
         "platforms": [
             "android",
