--- a/package.json
+++ b/package.json
@@ -39,35 +39,36 @@
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
-    "@angular/platform-server": "4.1.3",
-    "@ionic-native/background-geolocation": "^3.10.3",
-    "@ionic-native/core": "3.9.2",
-    "@ionic-native/dialogs": "^3.10.0",
-    "@ionic-native/geofence": "^3.10.3",
-    "@ionic-native/local-notifications": "^3.10.3",
-    "@ionic-native/network": "^3.10.3",
-    "@ionic-native/phonegap-local-notification": "^3.10.3",
-    "@ionic-native/push": "^3.10.3",
-    "@ionic-native/secure-storage": "^3.9.2",
-    "@ionic-native/splash-screen": "^3.9.2",
-    "@ionic-native/status-bar": "3.9.2",
-    "@ionic-native/unique-device-id": "^3.10.3",
+    "@angular/platform-server": "^4.1.3",
+    "@ionic-native/background-geolocation": "^3.12.1",
+    "@ionic-native/core": "3.12.1",
+    "@ionic-native/dialogs": "^3.12.1",
+    "@ionic-native/geofence": "^3.12.1",
+    "@ionic-native/local-notifications": "^3.12.1",
+    "@ionic-native/network": "^3.12.1",
+    "@ionic-native/phonegap-local-notification": "^3.12.1",
+    "@ionic-native/push": "^3.12.1",
+    "@ionic-native/secure-storage": "^3.12.1",
+    "@ionic-native/splash-screen": "^3.12.1",
+    "@ionic-native/status-bar": "3.12.1",
+    "@ionic-native/unique-device-id": "^3.12.1",
     "@ionic/storage": "2.0.1",
     "@types/sprintf-js": "0.0.27",
     "angular2-google-maps": "^0.17.0",
+    "async": "^2.4.1",
     "cordova-android": "^6.2.3",
     "cordova-browser": "^4.1.0",
     "cordova-ios": "^4.4.0",
-    "cordova-plugin-add-swift-support": "^1.6.0",
+    "cordova-plugin-add-swift-support": "^1.6.2",
     "cordova-plugin-app-event": "file:node_modules\\cordova-plugin-app-event",
-    "cordova-plugin-compat": "^1.0.0",
+    "cordova-plugin-compat": "^1.1.0",
     "cordova-plugin-console": "^1.0.7",
     "cordova-plugin-device": "^1.1.6",
     "cordova-plugin-dialogs": "^1.3.3",
     "cordova-plugin-geofence": "^0.7.0",
     "cordova-plugin-mauron85-background-geolocation": "^2.2.5",
     "cordova-plugin-network-information": "^1.3.3",
-    "cordova-plugin-secure-storage": "^2.6.5",
+    "cordova-plugin-secure-storage": "^2.6.8",
     "cordova-plugin-spinner-dialog": "^1.3.1",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-sqlite-2": "^1.0.4",
@@ -75,11 +76,11 @@
     "cordova-plugin-uniquedeviceid": "^1.3.2",
     "cordova-plugin-whitelist": "^1.3.2",
     "cordova-windows": "^5.0.0",
-    "de.appplant.cordova.plugin.local-notification": "^0.8.4",
+    "de.appplant.cordova.plugin.local-notification": "^0.8.5",
     "desktop": "0.0.0",
     "es6-promise-plugin": "^4.1.0",
     "intl": "^1.2.5",
-    "ionic-angular": "3.2.1",
+    "ionic-angular": "3.3.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionic2-numericpicker": "^1.2.0",
     "ionicons": "3.0.0",
@@ -88,18 +89,18 @@
     "moment-recur": "^1.0.5",
     "moment-round": "^1.0.1",
     "moment-timer": "^1.1.5",
-    "phonegap-plugin-push": "^1.10.4",
+    "phonegap-plugin-push": "^2.0.0-rc4",
     "pouchdb": "^6.2.0",
     "pouchdb-authentication": "^0.5.5",
     "pouchdb-find": "^6.2.0",
     "pouchdb-seamless-auth": "^1.0.4",
     "pouchdb-upsert": "^2.2.0",
     "rxjs": "^5.4.0",
-    "sprintf-js": "^1.1.0",
+    "sprintf-js": "^1.1.1",
     "sw-toolbox": "3.6.0",
     "twix": "^1.2.0",
     "uuid": "^3.0.1",
-    "zone.js": "^0.8.10"
+    "zone.js": "^0.8.12"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.7",
@@ -107,7 +108,8 @@
     "@ionic/cli-plugin-ionic-angular": "1.3.0",
     "@types/cordova": "0.0.34",
     "@types/pouchdb": "6.1.0",
-    "typescript": "^2.4.0-dev.20170518"
+    "node-sass": "^4.5.3",
+    "typescript": "^2.4.0-dev.20170608"
   },
   "scripts": {
     "clean": "ionic-app-scripts clean",
@@ -145,5 +147,6 @@
       "ios",
       "windows"
     ]
-  }
+  },
+  "false": {}
 }
