--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "cordova-plugin-uniquedeviceid": "^1.3.2",
     "cordova-plugin-whitelist": "^1.3.2",
     "cordova-windows": "^5.0.0",
+    "datepicker-ionic2": "^2.3.3",
     "de.appplant.cordova.plugin.local-notification": "^0.8.5",
     "desktop": "0.0.0",
     "es6-promise-plugin": "^4.1.0",
