Work order stuff
Others discarded to prevent conflict

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
-  "name": "OnSiteXI",
-  "app_id": "com.sesaonsite.onsitex1005",
+  "name": "OnSiteX",
+  "app_id": "com.sesaonsite.onsitex",
   "gulpStartupTasks": [
     "sass",
     "watch"
