--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "@types/sprintf-js": "0.0.27",
     "ajv": "^5.1.5",
     "angular2-google-maps": "^0.17.0",
-    "angular2-time-duration-picker": "^1.1.0",
     "async": "^2.4.1",
     "cordova-android": "^6.2.3",
     "cordova-browser": "^4.1.0",
@@ -83,6 +82,7 @@
     "desktop": "0.0.0",
     "es6-promise-plugin": "^4.1.0",
     "intl": "^1.2.5",
+    "ion-multi-picker": "^2.0.1",
     "ionic-angular": "^3.3.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -91,7 +91,6 @@
     "moment-recur": "^1.0.5",
     "moment-round": "^1.0.1",
     "moment-timer": "^1.1.5",
-    "ng2-customizing-datepicker": "^1.4.17",
     "object-keys": "^1.0.11",
     "phonegap-plugin-push": "^2.0.0-rc4",
     "pouchdb": "^6.2.0",
