--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     ],
     "dependencies": {
         "@agm/core": "^1.0.0-beta.0",
+        "@angular/animations": "^4.1.3",
         "@angular/common": "4.1.3",
         "@angular/compiler": "^4.1.3",
         "@angular/compiler-cli": "^4.1.3",
@@ -108,8 +109,8 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "^1.3.7",
-        "@ionic/cli-plugin-cordova": "1.3.0",
-        "@ionic/cli-plugin-ionic-angular": "^1.3.0",
+        "@ionic/cli-plugin-cordova": "1.4.0",
+        "@ionic/cli-plugin-ionic-angular": "1.3.1",
         "@types/cordova": "0.0.34",
         "@types/pouchdb": "6.1.0",
         "node-sass": "^4.5.3",
