Work Orders sum over shifts and pay period

--- a/package.json
+++ b/package.json
@@ -96,9 +96,12 @@
         "phonegap-plugin-push": "^2.0.0-rc4",
         "pouchdb": "^6.2.0",
         "pouchdb-authentication": "^0.5.5",
+        "pouchdb-collections": "^6.2.0",
         "pouchdb-find": "^6.2.0",
+        "pouchdb-md5": "^6.2.0",
         "pouchdb-seamless-auth": "^1.0.4",
         "pouchdb-upsert": "^2.2.0",
+        "pouchdb-utils": "^6.2.0",
         "reflect-metadata": "^0.1.10",
         "rxjs": "^5.4.0",
         "sprintf-js": "^1.1.1",
