Translation service and other updates

--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
         "@ionic-native/status-bar": "3.12.1",
         "@ionic-native/unique-device-id": "^3.12.1",
         "@ionic/storage": "2.0.1",
+        "@ngx-translate/core": "^7.0.0",
+        "@ngx-translate/http-loader": "^0.1.0",
         "@types/sprintf-js": "0.0.27",
         "ajv": "^5.1.5",
         "angular2-google-maps": "^0.17.0",
@@ -95,6 +97,7 @@
         "object-keys": "^1.0.11",
         "phonegap-plugin-push": "^2.0.0-rc4",
         "pouchdb": "^6.2.0",
+        "pouchdb-all-dbs": "^1.0.2",
         "pouchdb-authentication": "^0.5.5",
         "pouchdb-collections": "^6.2.0",
         "pouchdb-find": "^6.2.0",
