Preferences, bugfixes, language, etc.

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ plugins/
 plugins/android.json
 plugins/ios.json
 www/
+builds/
+binaries/
 $RECYCLE.BIN/
 
 .DS_Store
@@ -35,11 +37,5 @@ UserInterfaceState.xcuserstate
 *.xlsx
 *.apk
 *.keystore
-<<<<<<< HEAD
-OnSiteX.apk
 *.ipa
-OnSiteX_Debug.apk
-=======
-*.ipa
->>>>>>> a1a03afca7857b8476eb7b0d14eb3942c0b0b56a
 package-lock.json
