--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "target": "es2015"
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "node_modules/moment/moment.d.ts",
   ],
   "exclude": [
     "node_modules",
