Home page and payroll periods and shifts updates

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
   },
   "include": [
     "src/**/*.ts",
-    "node_modules/moment/moment.d.ts",
+    "node_modules/moment/moment.d.ts"
   ],
   "exclude": [
     "node_modules",
