--- a/package.json
+++ b/package.json
@@ -176,6 +176,8 @@
         "@types/cordova": "^0.0.34",
         "@types/pouchdb": "^6.1.0",
         "node-sass": "^4.5.3",
+        "tslint": "^5.4.3",
+        "tslint-eslint-rules": "^4.1.1",
         "typescript": "^2.4.0"
     },
     "scripts": {
