Updates, fix for Other Reports deleting issue

--- a/package.json
+++ b/package.json
@@ -157,8 +157,7 @@
         "desktop": "^0.0.0",
         "intl": "^1.2.5",
         "ion-multi-picker": "file:custom\\ion-multi-picker-2.0.4.tgz",
-        "ionic": "^3.6.0",
-        "ionic-angular": "^3.5.0",
+        "ionic-angular": "^3.6.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "localforage": "^1.5.0",
@@ -173,6 +172,7 @@
         "pouchdb": "^6.2.0",
         "pouchdb-adapter-cordova-sqlite": "^2.0.2",
         "pouchdb-all-dbs": "^1.0.2",
+        "pouchdb-auth": "^3.0.1",
         "pouchdb-authentication": "^0.5.5",
         "pouchdb-collections": "^6.2.0",
         "pouchdb-find": "^6.2.0",
@@ -191,10 +191,11 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "^2.0.1",
-        "@ionic/cli-plugin-cordova": "1.5.0",
-        "@ionic/cli-plugin-ionic-angular": "1.4.0",
+        "@ionic/cli-plugin-cordova": "1.6.2",
+        "@ionic/cli-plugin-ionic-angular": "1.4.1",
+        "@ionic/cli-plugin-proxy": "^1.4.1",
         "@types/cordova": "^0.0.34",
-        "@types/pouchdb": "^6.1.1",
+        "ionic": "^3.7.0",
         "node-sass": "^4.5.3",
         "tslint": "^5.5.0",
         "tslint-eslint-rules": "^4.1.1",
