minor updates ... contemplating work reports n sich

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -10,5 +10,8 @@
     "!www/lib/**/*",
     "!www/**/*.map"
   ],
-  "type": "ionic-angular"
+  "type": "ionic-angular",
+  "integrations": {
+    "cordova": {}
+  }
 }
