--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "ionic_source_map": "source-map",
     "ionic_bundler": "webpack",
     "ionic_source_map_types": "#inline-source-map",
-    "ionic_copy": "./src/config/ionic-copy.config.js"
+    "ionic_copy": "./src/config/ionic-copy.config.js",
+    "ionic_webpack": "./config/webpack.config.js"
   },
   "homepage": "https://github.com/starmobiledevelopers/OnSiteX/",
   "private": true,
@@ -153,10 +154,12 @@
     "ionic-angular": "^3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "json5": "^0.5.1",
+    "json5-loader": "^1.0.1",
     "json8": "^0.9.2",
     "localforage": "^1.5.0",
     "localforage-cordovasqlitedriver": "^1.6.0",
-    "moment": "^2.18.1",
+    "moment": "^2.19.4",
     "moment-parseformat": "^2.2.0",
     "moment-recur": "^1.0.7",
     "moment-round": "^1.0.1",
