Added flagged reports page, updated tabs, domain classes, etc

--- a/package.json
+++ b/package.json
@@ -165,17 +165,17 @@
     "moment-round": "^1.0.1",
     "moment-timer": "^1.1.5",
     "object-keys": "^1.0.11",
-    "pouchdb": "^6.2.0",
+    "pouchdb": "6.2.0",
     "pouchdb-adapter-cordova-sqlite": "^2.0.2",
     "pouchdb-all-dbs": "^1.0.2",
     "pouchdb-auth": "^3.0.1",
     "pouchdb-authentication": "^0.5.5",
-    "pouchdb-collections": "^6.2.0",
-    "pouchdb-find": "^6.2.0",
-    "pouchdb-md5": "^6.2.0",
+    "pouchdb-collections": "6.2.0",
+    "pouchdb-find": "6.2.0",
+    "pouchdb-md5": "6.2.0",
     "pouchdb-seamless-auth": "^2.0.1",
     "pouchdb-upsert": "^2.2.0",
-    "pouchdb-utils": "^6.2.0",
+    "pouchdb-utils": "6.2.0",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.2",
     "sprintf-js": "^1.1.1",
