Offline boot in progress ... doing pretty good though

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -3,6 +3,7 @@
   "report_history_title": "Report History",
   "settings_title": "App Settings",
   "login_title": "Login",
+  "login_first_title": "First Login",
   "shift_select_title": "Select Shift",
   "tech_settings_title": "User",
   "home_app_help_text": "<p>Shifts are numbered 1 through 7: Wednesday = Shift 1, Tuesday = Shift 2 etc.</p>\n\n<p>Every payroll period has 7 shifts. If you do not work a shift, that shift still exists and you will have 0 hours for that shift.</p>\n\n<p>A green checkbox will be displayed at the end of the shifts above when the hours in the work reports you have submitted for that shift are equal to the number of hours you should have worked for that shift.</p>\n\n<p>If submitted hours are not equal to shift hours, that is not necessarily bad. The most important number(s) are the number of hours you worked and the total hours for the pay period (Wednesday through Tuesday of shifts 1 through 7).</p>\n\n<p>The number of hours submitted is the total of all shift hours submitted: this number is what will be used to calculate the hours in your paycheck.</p>\n\n<p>Payroll Hours are the hours calculated from your hours submitted. This is the number of hours you should be paid for in your paycheck. However, payroll hours displayed here are UNVERIFIED hours.</p>\n\n<p>If you made a mistake and sent <b>too many hours</b>, then do not expect to see all of those hours on your paycheck.</p>\n\n<p>If you have submitted <b>too few hours</b>, it is your responsibility to correct them by submitting the appropriate work reports. <b>You will not be paid for hours not submitted (hours not reported).</b></p>\n\n<p>Too few hours do not trigger a flag.</p>\n\n<p>If you submit too many hours, an exception for that shift will be marked with a red flag.</p>\n\n<p>It is <b>your</b> responsibility to make sure you document all hours worked. The hours you see on this screen will be the hours you are paid unless the hours are flagged (red flag).</p>",
@@ -11,6 +12,10 @@
   "home_hours_submitted_for_shift": "shift hours submitted",
   "home_hours_submitted_for_payroll_period": "Hours Submitted",
   "home_payroll_hours_submitted": "Payroll Hours",
+  "login_first_title": "Welcome",
+  "login_first_message": "Welcome to SESA OnSite! This is your first time using the app on this device. Please enter your username and password to log in to the app.",
+  "login_first_offline_title": "No Internet Connection",
+  "login_first_offline_message": "No Internet connection detected. You must be connected to the Internet the first time this app runs.",
   "confirm": "Confirm",
   "delete_report": "Delete this report?",
   "delete": "Delete",
@@ -61,6 +66,10 @@
   "spinner_logging_in": "Logging in...",
   "offline_alert_title": "Offline",
   "offline_alert_message": "There is no Internet connection. Can't log in right now.",
+  "offline_login_title": "No Internet",
+  "offline_login_message": "There is no Internet connection. You can enter reports, but they will not be submitted until your phone is connected to the Internet. Do you want to continue, or go to your phone Settings to check the Internet connection?",
+  "continue": "Continue",
+  "open_phone_settings": "Phone Settings",
   "spinner_fetching_reports": "Fetching reports...",
   "error": "Error",
   "alert_retrieve_reports_error": "Could not retrieve reports. Please try again later.",
@@ -180,6 +189,7 @@
   "spinner_sending_reports_to_server": "Sending reports to server...",
   "manual_sync_error": "Unable to send reports to server. Please check your phone's Internet connection and try again. If you still get an error, please contact the developers.",
   "manual_sync_success": "Successfully sent reports to server.",
+  "synchronizing_db": "Now retrieving server database",
   "help_home": "Home Page",
   "help_reports": "Add Work Report",
   "help_report_history": "Work Report History",
