--- a/src/assets/i18n/es.json5
+++ b/src/assets/i18n/es.json5
@@ -3,6 +3,7 @@
   "report_history_title": "Reportes de Trabajo",
   "settings_title": "Ajustes de Aplicacion",
   "login_title": "Autenticar",
+  "login_first_title": "Primero Autenticarse",
   "shift_select_title": "Elija el Turno",
   "tech_settings_title": "Usuario",
   "home_app_help_text": "<p>Los turnos se numeran de 1 a 7: Miércoles = Turno 1, Martes = Turno 2, etc.</p>\n\n<p>Cada período de nómina tiene 7 turnos. Si usted no trabaja un turno, ese turno todavía existe y usted tendrá \"0\" horas para ese turno.</p>\n\n<p>Una casilla de verificación verde se mostrará al final de los turnos cuando las horas enviadas para ese turno son iguales al número de horas que debería haber trabajado para ese turno.</p>\n\n<p>Si las horas presentadas no son iguales a las horas de turno, eso no es necesariamente malo. Los números más importantes son el número de horas trabajadas y el número total de horas para el período de pago (de miércoles a martes de turnos de 1 a 7).</p>\n\n<p>El total horas declaradas en sus reportes se utilizará para calcular las horas en su cheque de pago.</p>\n\n<p>Horas de pago son calculadas a partir de aver sido enviadas. El número de horas sometidas seran las horas que se pagaran en su cheque. Sin embargo,las horas de nómina que se muestran aquí NO SON CONFIRMADAS.</p>\n\n<p>Si usted cometió un error y envió demasiadas horas, entonces no espere ver todas esas horas en su cheque de pago.</p>\n\n<p>Si ha sometido <b>menos horas</b>, es <b>su</b> responsabilidad corregirlas enviando los reportes de trabajo apropiados. <b>No se le pagará por horas no sometidas (las horas no reportadas).</b></p>\n\n<p>Menos horas no activan una bandera.</p>\n\n<p>Demasiadas horas activarán un bandera roja de error.</p>\n\n<p>Es <b>su</b> responsabilidad asegurarse de documentar todas las horas trabajadas. Las horas que ve en esta pantalla serán las horas que le pagen, a menos las horas que estén marcadas como una excepción (con una bandera roja).</p>",
@@ -11,6 +12,10 @@
   "home_hours_submitted_for_shift": "horas sometidas de turno",
   "home_hours_submitted_for_payroll_period": "Horas Sometidas",
   "home_payroll_hours_submitted": "Horas de Nómina",
+  "login_first_title": "Bienvenido",
+  "login_first_message": "Bienvenido a SESA OnSite! Esta es la primera vez que usa la aplicación en este dispositivo. Por favor ingrese su nombre de usuario y contraseña para iniciar sesión en la aplicación.",
+  "login_first_offline_title": "Sin Conexión a Internet",
+  "login_first_offline_message": "No se detectó conexión a Internet. Debe estar conectado a Internet la primera vez que se ejecuta esta aplicación.",
   "confirm": "Confirmar",
   "delete_report": "¿Eliminar este reporte?",
   "delete": "Borrar",
@@ -61,6 +66,10 @@
   "spinner_logging_in": "Iniciar sesión...",
   "offline_alert_title": "Desconectado",
   "offline_alert_message": "No hay conexión a Internet. No puedo iniciar sesión ahora mismo.",
+  "offline_login_title": "Sin Conexión a Internet",
+  "offline_login_message": "No hay conexión a Internet. Puede ingresar reportes, pero no se enviarán hasta que su teléfono esté conectado a Internet. ¿Continuar, o acceder a Configuración de su teléfono para verificar la conexión a Internet?",
+  "continue": "Continuar",
+  "open_phone_settings": "Ajustes de Teléfono",
   "spinner_fetching_reports": "Obtener Reportes…",
   "error": "Error",
   "alert_retrieve_reports_error": "No se pudieron recuperar reportes. Por favor, inténtelo de nuevo más tarde.",
@@ -180,6 +189,7 @@
   "spinner_sending_reports_to_server": "Enviar reportes al servidor...",
   "manual_sync_error": "No se pueden enviar reportes al servidor. Comprueba la conexión a Internet de tu teléfono e inténtalo de nuevo. Si sigue recibiendo un error, póngase en contacto con los desarrolladores.",
   "manual_sync_success": "Envió correctamente los reportes al servidor.",
+  "synchronizing_db": "Ahora recuperando datos del servidor",
   "help_home": "Página Principal",
   "help_reports": "Añadir Reportes de Trabajo",
   "help_report_history": "Historial de Reportes de Trabajo",
