--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "@ionic-native/native-audio": "^4.0.0",
     "@ionic-native/native-storage": "^4.0.0",
     "@ionic-native/network": "^4.0.0",
+    "@ionic-native/open-native-settings": "^4.5.2",
     "@ionic-native/phonegap-local-notification": "^4.0.0",
     "@ionic-native/push": "^4.0.0",
     "@ionic-native/secure-storage": "^4.0.0",
@@ -130,6 +131,7 @@
     "cordova-android-support-gradle-release": "0.0.2",
     "cordova-browser": "^4.1.0",
     "cordova-ios": "^4.4.0",
+    "cordova-open-native-settings": "^1.4.1",
     "cordova-plugin-app-event": "^1.2.1",
     "cordova-plugin-app-update": "^1.3.9",
     "cordova-plugin-app-version": "^0.1.9",
@@ -240,7 +242,8 @@
         "ACCOUNT_LABEL": "@string/app_name",
         "ACCOUNT_TYPE": "$PACKAGE_NAME.account",
         "CONTENT_AUTHORITY": "$PACKAGE_NAME"
-      }
+      },
+      "cordova-open-native-settings": {}
     },
     "platforms": [
       "ios",
