Some updates and whatnot .... currently just copying onsitex-domain/src into src/domain, not symlinking

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,11 @@
     "node_modules",
     "Docs/**"
   ],
-  "compileOnSave": false
+  "compileOnSave": false,
+  "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
+    "preserveWhiteSpaces": false,
+    "preserveSymlinks": true
+  }
+
 }
