--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "ajv": "^5.2.2",
     "angular2-google-maps": "^0.17.0",
     "async": "^2.5.0",
+    "bignumber.js": "^6.0.0",
     "cordova": "^7.1.0",
     "cordova-android": "6.3.0",
     "cordova-android-play-services-gradle-release": "^0.0.2",
@@ -155,6 +156,7 @@
     "cordova-sqlite-ext": "^0.10.5",
     "de.appplant.cordova.plugin.local-notification": "^0.8.5",
     "desktop": "^0.0.0",
+    "file-saver": "^1.3.3",
     "intl": "^1.2.5",
     "ionic-angular": "^3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -162,33 +164,38 @@
     "json5": "^0.5.1",
     "json5-loader": "^1.0.1",
     "json8": "^0.9.2",
+    "json8-patch": "^0.4.0",
+    "json8-pointer": "^0.7.0",
     "localforage": "^1.5.0",
     "localforage-cordovasqlitedriver": "^1.6.0",
     "moment": "^2.19.4",
     "moment-parseformat": "^2.2.0",
     "moment-recur": "^1.0.7",
     "moment-round": "^1.0.1",
+    "moment-shortformat": "^2.1.0",
     "moment-timer": "^1.1.5",
     "object-keys": "^1.0.11",
-    "onsitex-domain": "git+https://github.com/starmobiledevelopers/onsitex-domain.git",
-    "pouchdb": "6.2.0",
+    "pouchdb": "^6.4.3",
     "pouchdb-adapter-cordova-sqlite": "^2.0.2",
     "pouchdb-all-dbs": "^1.0.2",
-    "pouchdb-auth": "^3.0.1",
-    "pouchdb-authentication": "^0.5.5",
-    "pouchdb-collections": "6.2.0",
-    "pouchdb-find": "6.2.0",
-    "pouchdb-md5": "6.2.0",
-    "pouchdb-seamless-auth": "^2.0.1",
+    "pouchdb-auth": "^4.0.0",
+    "pouchdb-authentication": "^1.1.1",
+    "pouchdb-browser": "6.4.3",
+    "pouchdb-collections": "^6.4.3",
+    "pouchdb-core": "^6.4.3",
+    "pouchdb-find": "^6.4.3",
+    "pouchdb-md5": "^6.4.3",
+    "pouchdb-seamless-auth": "^4.0.0",
     "pouchdb-upsert": "^2.2.0",
-    "pouchdb-utils": "6.2.0",
+    "pouchdb-utils": "^6.4.3",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.2",
     "sprintf-js": "^1.1.1",
     "sw-toolbox": "^3.6.0",
     "transform-pouch": "^1.1.3",
     "twix": "^1.2.0",
-    "uuid": "^3.1.0",
+    "uuid": "^3.2.1",
+    "xlsx": "^0.11.18",
     "zone.js": "^0.8.12"
   },
   "devDependencies": {
@@ -197,6 +204,7 @@
     "@typed/hashmap": "^1.0.1",
     "@types/cordova": "^0.0.34",
     "@types/moment-round": "^1.0.3",
+    "@types/pouchdb-core": "^6.1.11",
     "@types/sprintf-js": "^1.1.0",
     "@types/uuid": "^3.4.3",
     "ionic": "3.19.1",
