New icomoon version, home screen in the midst of debugging, tabs swipe fixed

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -207,5 +207,6 @@
   "crew": "Crew",
   "crew_number": "Crew No.",
   "crew_translate": "Crew",
-  "crew_number_translate": "Crew No."
+  "crew_number_translate": "Crew No.",
+  "loading_work_reports": "Loading reports ...",
 }
