--- a/src/assets/i18n/es.json5
+++ b/src/assets/i18n/es.json5
@@ -180,7 +180,7 @@
   "show_clock": "Mostrar el Enlace de Bolsillo",
   "show_clock_help": "Muestra el reloj animado, en caso de que quiera verlo. Vuelve a tocar la pantalla para volver a traer la aplicación.",
   "error_blank_item": "El elemento del formulario '%s' está vacío.",
-  "error_report_not_found": "El informe no se encontró en la lista. No deberías ver esto. Envía un comentario desde la página de configuración (<span class='alert-with-icon'><span class='alert-icon'>&#xf20d;</span></span>) que nos indica.",
+  "error_report_not_found": "El reporte no se encontró en la lista. No deberías ver esto. Envía un comentario desde la página de configuración (<span class='alert-with-icon'><span class='alert-icon'>&#xf20d;</span></span>) que nos indica.",
   "error_no_site_title": "Sitio no Encontrado",
   "error_no_site_message": "No se encontró el sitio de trabajo '%s %s %s'. Por favor, envíe un comentario a los desarrolladores diciéndoles lo que sucedió.",
   "off": "Descanso",
@@ -207,5 +207,6 @@
   "crew": "Crew",
   "crew_number": "Crew No.",
   "crew_translate": "Equipo",
-  "crew_number_translate": "Número de Equipo"
+  "crew_number_translate": "Número de Equipo",
+  "loading_work_reports": "Carga de reportes ...",
 }
