Push, LocalNotifications plugins added. ShiftView page updated. Font udpated. RandomColor service added. Clock updated to have caption.

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -218,4 +218,5 @@
   "function_in_development": "This function is still in development",
   "show_all_shifts": "Show all shifts",
   "tap_to_hide_clock": "(Tap to hide clock)",
+  "reports_graph_label": "Reports",
 }
