--- a/src/assets/i18n/es.json5
+++ b/src/assets/i18n/es.json5
@@ -218,4 +218,5 @@
   "function_in_development": "Esta función aún está en desarrollo",
   "show_all_shifts": "Mostrar todos los turnos",
   "tap_to_hide_clock": "(Toca para ocultar el reloj)",
+  "reports_graph_label": "Reportes",
 }
