--- a/package.json
+++ b/package.json
@@ -84,7 +84,14 @@
     "cordova-plugin-statusbar",
     "ionic-plugin-keyboard",
     "cordova-plugin-network-information",
-    "cordova-plugin-secure-storage"
+    "cordova-plugin-secure-storage",
+    "de.appplant.cordova.plugin.local-notification",
+    "cordova-open-native-settings",
+    "cordova-plugin-vibration",
+    "phonegap-plugin-push",
+    {
+      "locator": "phonegap-plugin-push"
+    }
   ],
   "dependencies": {
     "@agm/core": "^1.0.0-beta.0",
@@ -114,7 +121,7 @@
     "@ionic-native/network": "^4.0.0",
     "@ionic-native/open-native-settings": "^4.5.2",
     "@ionic-native/phonegap-local-notification": "^4.0.0",
-    "@ionic-native/push": "^4.0.0",
+    "@ionic-native/push": "^4.5.3",
     "@ionic-native/secure-storage": "^4.0.0",
     "@ionic-native/splash-screen": "^4.0.0",
     "@ionic-native/status-bar": "4.0.0",
@@ -127,6 +134,9 @@
     "angular2-google-maps": "^0.17.0",
     "async": "^2.5.0",
     "bignumber.js": "^6.0.0",
+    "chart.js": "^2.7.1",
+    "chartjs-plugin-datalabels": "^0.2.0",
+    "chartjs-plugin-stacked100": "^0.4.4",
     "cordova": "^7.1.0",
     "cordova-android": "6.3.0",
     "cordova-android-play-services-gradle-release": "^0.0.2",
@@ -177,6 +187,7 @@
     "moment-shortformat": "^2.1.0",
     "moment-timer": "^1.1.5",
     "object-keys": "^1.0.11",
+    "phonegap-plugin-push": "^2.1.3",
     "pouchdb": "^6.4.3",
     "pouchdb-adapter-cordova-sqlite": "^2.0.2",
     "pouchdb-all-dbs": "^1.0.2",
@@ -254,7 +265,10 @@
         "CONTENT_AUTHORITY": "$PACKAGE_NAME"
       },
       "cordova-open-native-settings": {},
-      "cordova-plugin-vibration": {}
+      "cordova-plugin-vibration": {},
+      "phonegap-plugin-push": {
+        "FCM_VERSION": "11.6.2"
+      }
     },
     "platforms": [
       "ios",
