Updated package.json, config.xml, and larger splash screen for I
Hopefully that won't break Android's resources build.

--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "chartjs-plugin-stacked100": "^0.4.4",
     "cordova": "^7.1.0",
     "cordova-android": "7.1.0",
+    "cordova-android-support-gradle-release": "^1.2.0",
     "cordova-browser": "^5.0.3",
     "cordova-custom-config": "^5.0.2",
     "cordova-ios": "^4.5.4",
