A symlink and some slight updates

--- a/package.json
+++ b/package.json
@@ -135,8 +135,6 @@
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-badge": "^0.8.7",
     "cordova-plugin-camera": "^4.0.2",
-    "cordova-plugin-compat": "^1.1.0",
-    "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-dialogs": "^1.3.4",
     "cordova-plugin-mauron85-background-geolocation": "^2.3.3",
@@ -163,6 +161,7 @@
     "json8-patch": "^0.4.1",
     "json8-pointer": "^0.7.1",
     "localforage": "^1.5.0",
+    "localforage-cordovasqlitedriver": "^1.7.0",
     "moment": "^2.19.4",
     "moment-parseformat": "^2.2.0",
     "moment-range": "^3.1.1",
@@ -198,7 +197,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.1.4",
-    "@ionic/cli-plugin-proxy": "1.5.7",
+    "@ionic/cli-plugin-proxy": "1.5.8",
     "@types/cordova": "^0.0.34",
     "@types/moment-duration-format": "^2.2.0",
     "@types/moment-range": "^3.1.0",
@@ -206,7 +205,7 @@
     "@types/pouchdb-core": "^6.1.11",
     "@types/sprintf-js": "^1.1.0",
     "@types/uuid": "^3.4.3",
-    "ionic": "3.19.1",
+    "ionic": "3.20.0",
     "node-sass": "^4.5.3",
     "tslint": "^5.5.0",
     "tslint-eslint-rules": "^4.1.1",
