Added a hook that we won't be using
Because it’s now supported by cordova-ios on its own

--- a/package.json
+++ b/package.json
@@ -230,7 +230,8 @@
       "cordova-sqlite-evcore-extbuild-free": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   },
   "false": {}
