Updates to settings, tabs, DB, and messages

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -214,6 +214,7 @@
   "vacation": "Vacation",
   "vacation_hours": "Vacation Hrs.",
   "version": "Version",
+  "vibration": "Vibration",
   "warning": "Warning",
   "weeks_to_show": "Display Weeks",
   "work_order": "Work Order",
