--- a/src/assets/i18n/es.json5
+++ b/src/assets/i18n/es.json5
@@ -214,6 +214,7 @@
   "vacation": "Vacaciones",
   "vacation_hours": "Horas de Vacaciones",
   "version": "Versión",
+  "vibration": "Vibración",
   "warning": "Alerta",
   "weeks_to_show": "Mostrar Semanas",
   "work_order": "Orden de trabajo",
